--- a/WebContent/views/frmDepartamentos.xhtml
+++ b/WebContent/views/frmDepartamentos.xhtml
@@ -35,7 +35,9 @@
 										<label class="control-label">Nombre</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" placeholder="Nombre" type="text" jsf:id="nombre" name="nombre" value="#{gestionDepartamentos.departamento.nombre}" required="true"/>
+                                    	<input class="form-control" placeholder="Nombre" type="text" jsf:id="nombre" name="nombre" value="#{gestionDepartamentos.departamento.nombre}" required="true">
+                                   			<f:validator validatorId = "com.exceptions.OnlyCharacters"/>
+                                   		</input>
                                     	<p:message for="nombre" style="color:red" />
                                    	</div>
 								</div>
