--- a/WebContent/views/frmEstaciones.xhtml
+++ b/WebContent/views/frmEstaciones.xhtml
@@ -35,7 +35,9 @@
 										<label class="control-label">Nombre</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" placeholder="Nombre" type="text" jsf:id="nombre" name="nombre" value="#{gestionEstaciones.estacion.nombre}"/>
+                                    	<input class="form-control" placeholder="Nombre" type="text" jsf:id="nombre" name="nombre" value="#{gestionEstaciones.estacion.nombre}">
+                                   			<f:validator validatorId = "com.exceptions.OnlyCharacters"/>
+                                   		</input>
                                     	<p:message for="nombre" style="color:red" />
                                    	</div>
 								</div>
@@ -45,7 +47,9 @@
 										<label class="control-label">Calidad agua</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" placeholder="Calidad del agua" type="text" jsf:id="calidadAgua" name="calidadAgua" value="#{gestionEstaciones.estacion.calidad_agua}"/>
+                                    	<input class="form-control" placeholder="Calidad del agua" type="text" jsf:id="calidadAgua" name="calidadAgua" value="#{gestionEstaciones.estacion.calidad_agua}">
+                                   			<f:validator validatorId = "com.exceptions.OnlyCharacters"/>
+                                   		</input>
                                     	<p:message for="calidadAgua" style="color:red" />
                                    	</div>
 								</div>
@@ -65,7 +69,9 @@
 										<label class="control-label">Latitud</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" placeholder="Latitud" type="number" jsf:id="latitud" name="latitud" value="#{gestionEstaciones.estacion.latitud}"/>
+                                    	<input class="form-control" placeholder="Latitud" type="number" jsf:id="latitud" name="latitud" value="#{gestionEstaciones.estacion.latitud}">
+                                   			<f:validator validatorId = "com.exceptions.OnlyRealNumbers"/>
+                                   		</input>
                                     	<p:message for="latitud" style="color:red" />
                                    	</div>
 								</div>
@@ -75,7 +81,9 @@
 										<label class="control-label">Longitud</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input type="number" class="form-control" placeholder="Longitud" jsf:id="longitud" name="longitud" value="#{gestionEstaciones.estacion.longitud}"/>
+                                    	<input type="number" class="form-control" placeholder="Longitud" jsf:id="longitud" name="longitud" value="#{gestionEstaciones.estacion.longitud}">
+                                   			<f:validator validatorId = "com.exceptions.OnlyRealNumbers"/>
+                                   		</input>
                                         <p:message for="longitud" style="color:red" />
                                    	</div>
 								</div>
