--- a/WebContent/views/frmEstaciones.xhtml
+++ b/WebContent/views/frmEstaciones.xhtml
@@ -69,8 +69,8 @@
 										<label class="control-label">Latitud</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" placeholder="Latitud" type="number" jsf:id="latitud" name="latitud" value="#{gestionEstaciones.estacion.latitud}">
-                                   			<f:validator validatorId = "com.exceptions.OnlyRealNumbers"/>
+                                    	<input class="form-control" placeholder="Latitud" type="text" jsf:id="latitud" name="latitud" value="#{gestionEstaciones.estacion.latitud}">
+<!--                                    			<f:validator validatorId = "com.exceptions.OnlyRealNumbers"/> -->
                                    		</input>
                                     	<p:message for="latitud" style="color:red" />
                                    	</div>
@@ -81,8 +81,8 @@
 										<label class="control-label">Longitud</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input type="number" class="form-control" placeholder="Longitud" jsf:id="longitud" name="longitud" value="#{gestionEstaciones.estacion.longitud}">
-                                   			<f:validator validatorId = "com.exceptions.OnlyRealNumbers"/>
+                                    	<input  class="form-control" placeholder="Longitud" type="text" jsf:id="longitud" name="longitud" value="#{gestionEstaciones.estacion.longitud}">
+<!--                                    			<f:validator validatorId = "com.exceptions.OnlyRealNumbers"/> -->
                                    		</input>
                                         <p:message for="longitud" style="color:red" />
                                    	</div>
@@ -106,11 +106,21 @@
                                 <div class="form-group">
                                     <div class="col-sm-4 col-sm-offset-2">
                                         <a class="btn btn-white" href="menuEstaciones.xhtml"> Cancelar</a>
-                                        <h:commandButton value="Guardar" rendered="#{!gestionEstaciones.modoEdicion}" 
-											update=":form" action="#{gestionEstaciones.insertEstacion()}" class="btn btn-primary">
-										    	<f:param name="id" value="${gestionEstaciones.id}" />
-								    			<f:param name="modalidad" value="update" />
-										</h:commandButton>
+                                         <c:choose>
+										    <c:when test="#{gestionUsuarios.modoEdicion}">
+		                                        <h:commandButton value="Guardar" rendered="#{!gestionEstaciones.modoEdicion}" 
+													update=":form" action="#{gestionEstaciones.insertEstacion()}" class="btn btn-primary">
+												    	<f:param name="id" value="${gestionEstaciones.id}" />
+										    			<f:param name="modalidad" value="update" />
+												</h:commandButton>
+											</c:when>
+											<c:otherwise>
+												<h:commandButton value="Guardar" rendered="#{!gestionEstaciones.modoEdicion}" 
+													update=":form" action="#{gestionEstaciones.insertEstacion()}" class="btn btn-primary">
+										    			<f:param name="modalidad" value="insert" />
+												</h:commandButton>
+											</c:otherwise>
+										</c:choose>
                                     </div>
                                 </div>
 							</form>
