funciona modi usuario

--- a/WebContent/views/FrmUser.xhtml
+++ b/WebContent/views/FrmUser.xhtml
@@ -178,11 +178,11 @@
 								</div>
 								
 								<div class="row mt-3">
-									<div class="col-sm-1 pt-2" jsf:rendered="#{gestionUsuarios.showOrHide()}">
-										<label class="control-label" jsf:rendered="#{gestionUsuarios.showOrHide()}">Ocupacion</label>
+									<div class="col-sm-1 pt-2" jsf:rendered="#{!gestionUsuarios.showOrHide()}">
+										<label class="control-label" jsf:rendered="#{!gestionUsuarios.showOrHide()}">Ocupacion</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" jsf:rendered="#{gestionUsuarios.showOrHide()}" placeholder="Ocupacion" type="text" id="ocupacion" name="ocupacion" value="#{gestionUsuarios.ocupacion}">
+                                    	<input class="form-control" jsf:rendered="#{!gestionUsuarios.showOrHide()}" placeholder="Ocupacion" type="text" id="ocupacion" name="ocupacion" value="#{gestionUsuarios.ocupacion}">
                                    			<f:validator validatorId = "com.exceptions.OnlyCharacters"/>
                                    		</input>
                                    		<p:message for="ocupacion" style="color:red" />
@@ -194,20 +194,10 @@
                                 <div class="form-group">
                                     <div class="col-sm-4 col-sm-offset-2">
                                         <a class="btn btn-white" href="menuUsuarios.xhtml"> Cancelar</a>
-                                        <c:choose>
-										    <c:when test="#{gestionUsuarios.modoEdicion}">
-										        <h:commandButton value="Guardar" rendered="true" update=":form" action="#{gestionUsuarios.insertUsuario()}" class="btn btn-primary">
-											    	<f:param name="id" value="${gestionUsuarios.id}" />
-									    			<f:param name="modalidad" value="update" />
-												</h:commandButton>
-										    </c:when>
-										    <c:otherwise>
-										        <h:commandButton value="Guardar" rendered="true" update=":form" action="#{gestionUsuarios.insertUsuario()}" class="btn btn-primary">
-									    			<f:param name="modalidad" value="insert" />
-												</h:commandButton>
-										    </c:otherwise>
-										</c:choose>
-                                        
+                        					<h:commandButton value="Guardar" rendered="true" update=":form" action="#{gestionUsuarios.insertUsuario()}" class="btn btn-primary">
+										    	<f:param name="id" value="${gestionUsuarios.id}" />
+								    			<f:param name="modalidad" value="update" />
+											</h:commandButton>
                                     </div>
                                 </div>
 							</form>
