volvio el prerenderView a mediciones

--- a/WebContent/views/frmMediciones.xhtml
+++ b/WebContent/views/frmMediciones.xhtml
@@ -24,9 +24,9 @@
 	                    </div>
 	                    <div class="ibox-content">
 	                    
-	                    
-
-							
+   	                    	<f:metadata>
+							    <f:event type="preRenderView" listener="#{gestionMediciones.preRenderView}"/>
+							</f:metadata>
 							
 							<form jsf:id="medicion" class="form-horizontal">
 								<div class="row">
