--- a/WebContent/views/frmCasillas.xhtml
+++ b/WebContent/views/frmCasillas.xhtml
@@ -48,9 +48,7 @@
 										<label class="control-label">Unidad de medida</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" placeholder="Unidad de medida" type="text" jsf:id="unidad_de_medida" name="unidad_de_medida" value="#{gestionCasillas.casilla.unidad_de_medida}" required="true">
-                                   			<f:validator validatorId = "com.exceptions.OnlyCharactersAndNumbers" /> 
-                                   		</input> 
+                                    	<input class="form-control" placeholder="Unidad de medida" type="text" jsf:id="unidad_de_medida" name="unidad_de_medida" value="#{gestionCasillas.casilla.unidad_de_medida}" required="true"/>
                                     	<p:message for="unidad_de_medida" style="color:red" />
                                    	</div>
 								</div>
